# Salsa

./: .gitignore  LICENSE  README.md  api.py  bentofile.yaml  config_template.py  install.sh  main.py  memory_profile.py  pyproject.toml  requirements.txt  service.py  utils.py  video.py
.github/workflows/: black.yml
config/: config_template.py
config/bento/: config_dino.yaml  config_ocr.yaml  config_vlm.yaml
docs/: call_dif_server.d2  call_same_server.d2  docs.d2  vigilant.d2
inferences/: dino.py  lang.py  ocr.py  vision_lang.py
memory_check/: memory_checking.md  memory_profile.py  testcode.py  utils.py
models/: dino.py  ocr.py  vision_language.py
parser/: CODE_TEMPLATE  README.md  code_generator.py  code_parser.py
pipelines/: plot_section.py  thumbnail_description.py  video_section.py
preprocess/: image.py  prompt.py  text.py  thumbnail.py  transcript.py  video.py
prompts/: EXAMPLE
